style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
}

:root {
    --bg-navbar: rgba(255, 255, 255, 0.98);
    --bg-section: #0000000A;
    --bg-btn-1: #0071E3;
    --bg-btn-2: rgba(255,255,255, 0);;
    --text-btn-1: #FFF;
    --text-btn-2: #0071E3;
    --bg-grid-item-light: #0000000A;
    --bg-grid-item-dark: #000;
    --text-grid-item-dark: #FFF;
    --text-grid-item-light: #000;
}

.navbar-header {
    display: flex;
    flex-direction: column;
}

.navbar-mobile {
    display: block;
}

.navbar-mobile-collection {
    display: flex;
    width: 6rem;
    justify-content: space-between;
    align-items: center;
}

.navbar-section {
    position: fixed;
    width: 100vw;
    display: block;
}

.navbar-student {
    display: flex;
    width: 100vw;
    height: 40px;
    padding: 0 12rem 0 25rem;
    background: var(--bg-navbar);
}

.navbar-student-list {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: start;
    color:  #000000CC;
    list-style: none;
    font-size: 0.8rem;
    row-gap: 1rem;
}

.navbar-student-list-item {
    padding: 0 6px 0 6px;
}

.navbar-student-list-item:hover {
    text-decoration: underline;
    cursor: pointer;
}

.navbar_main {
    display: flex;
    align-items: center;
    width: 100dvw;
    height: 2.75rem;
    background: var(--bg-navbar);
    opacity: 99%;
}

.navbar-desktop {
    display: none;
}

.navbar-mobile {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    color: #000000CC;
    list-style: none;
    width: 100%;
    margin: 0 auto;
    padding: 0 1rem;
    font-size: 0.8rem;
}

.navbar_main_list_image {
    width: 1rem;
    height: 1rem;
    flex: 1;
}

.navbar_main_list_item {
    padding: 0 0.375rem 0 0.375rem;
}

a {
    list-style: none;
    text-decoration: none;
    color: rgba(0, 0, 0, 0.8);
}

a:hover {
    color: rgba(0, 0, 0, 1);

}

.above_the_fold {
    display: flex;
    flex-direction: column;
    height: 100%;
    width: 100%;
    background-color: var(--bg-section);
    padding-top: 2rem;
}

.below_fold_1 {
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    margin-top: 10px;
    height: 100%;
    width: 100%;
    background-color: var(--bg-section);
}

.below_fold_2 {
    display: flex;
    flex-direction: column;
    margin-top: 10px;
    height: 450px;
    width: 100%;
    background: linear-gradient(to bottom, #a1e8ff 0%,#f1f8fa 100%);;
}

.below_fold_grid {
    display: grid;
    grid-template-columns: 1fr;
    column-gap: 10px;
    row-gap: 10px;
    margin-top: 10px;
    height: 100%;
    padding: 0;
}

.section_title {
    font-size: 2rem;
    height: 2.25rem;
    line-height: 2.25rem;
    font-weight: 400;
}

.section_subtitle {
    height: 2.25rem;
    font-size: 1.2rem;
    line-height: 2.25rem;
    font-weight: 200;
}

.section_buttons {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0.5rem auto;
    width: 100%;
    width: 320px;
    padding: 0 1rem;
    height: 2.75rem;
    line-height: 2.25rem;
    text-align: center;
    column-gap: 1rem;
}

.section_button_1 {
    padding: 0.8rem 1.5rem;
    border-radius: 50px;
    height: 45px;
    border: none;
    font-weight: 200;
    background-color: var(--bg-btn-1);
    color: var(--text-btn-1);
    font-size: 1rem;
    cursor: pointer;
}

.section_button_1:hover {
    background-color: #007af4;
    cursor: pointer;
}

.section_button_2 {
    padding: 0.8rem 1.5rem;
    border-radius: 50px;
    font-weight: 200;
    height: 45px;
    border: 1px #0071E3 solid;
    background: var(--bg-btn-2);
    color: var(--text-btn-2);
    font-size: 1rem;
    cursor: pointer;
}

.section_button_2:hover {
    border: none;
    background-color: #0071E3;
    border: 1px #FFF solid;
    color: #FFF;
    cursor: pointer;
}

.image_holder {
    margin: 0 auto;
    margin-top: 1.25rem;
}


.section_cta {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    height: 160px;
}

.section_text {
    text-align: center;
    height: 100px;
}

.section_image {
    max-width: 18.75rem;
    height: 100%;
    z-index: 5;
    margin-top: 2rem;
}

.grid_title {
    font-size: 2rem;
    height: 2.25rem;
    line-height: 2.25rem;
    font-weight: 400;
}

.bold {
    font-weight: 800;
}

.grid_subtitle {
    height: 2.25rem;
    font-size: 1.2rem;
    line-height: 2.25rem;
    font-weight: 200;
}

.grid_buttons {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0.5rem auto;
    width: 100%;
    width: 320px;
    padding: 0 1rem;
    height: 2.75rem;
    line-height: 2.25rem;
    text-align: center;
    column-gap: 1rem;
}

.grid_button_1 {
    padding: 0.5rem 0.9rem;
    border-radius: 50px;
    border: none;
    background-color: var(--bg-btn-1);
    color: var(--text-btn-1);
    font-size: 1rem;
    font-weight: 200;
    cursor: pointer;
}

.grid_button_1:hover {
    background-color: #007af4;
    cursor: pointer;
}

.grid_button_2 {
    padding: 0.5rem 0.9rem;
    border-radius: 50px;
    border: 1px #0071E3 solid;
    background: var(--bg-btn-2);
    color: var(--text-btn-2);
    font-size: 1rem;
    font-weight: 200;
    cursor: pointer;
}

.grid_button_2:hover {
    border: none;
    background-color: #0071E3;
    border: 1px #0000000A solid;
    color: #FFF;
    cursor: pointer;
}

.image_holder_grid {
    margin-top: 1rem;
}

.grid_image {
    max-width: 500px;
    height: 100%;
    width: 100%;
    z-index: 5;
    padding-bottom: 3rem;
}

.grid_cta {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    height: 100%;
}

.grid_text {
    text-align: center;
    height: 100px;
}

.grid_item_light {
    background-color: var(--bg-grid-item-light);
    color: var(--text-grid-item-light);
    display: flex;
    flex-direction: column;
    align-items: center; /* centers text + image within each cell */
    text-align: center;
    height: 100%;
    padding: 2rem 0 0 0 ;
}
.grid_item_dark {
    background-color: var(--bg-grid-item-dark);
    color: var(--text-grid-item-dark);
    display: flex;
    flex-direction: column;
    align-items: center; /* centers text + image within each cell */
    text-align: center;
    height: 100%;
    padding: 2rem 0 0 0;
}

.grid_subtitle_short {
    height: 1.65rem;
    font-size: 1.2rem;
    line-height: 2rem;
    font-weight: 200;
}

.grid_image_macbookpro {
    width: 100%;
    max-height: 400px;
    width: 100%;
    z-index: 5;
    padding: 4.5rem 0 2rem 0;
}

.grid_image_pods {
    max-width: 300px;
    height: 100%;
    width: 100%;
    z-index: 5;
    padding: 4.5rem 0 0 0;
}

.grid_image_watch {
    width: 100%;
    max-height: 400px;
    width: 100%;
    z-index: 5;
    padding: 3rem 0 2rem 0;
}

.grid_image_exchange {
    max-width: 300px;
    height: 100%;
    width: 100%;
    z-index: 5;
    padding: 4.5rem 0 0 0;
}

@media (min-width: 48rem) and (max-width: 63.99rem) {
    
    .below_fold_grid {
        grid-template-columns: 1fr 1fr;
        padding: 0 0.625rem 0 0.625rem;
    }

    .navbar_main_list_image {
        width: 1.5rem;
        height: 1.5rem;
    }

    .grid_cta {
        height: 0%;
    }

    .grid_image_pods {
        padding: 11.5rem 0 0 0;
    }

    .grid_image_watch {
        padding: 10rem 0 0rem 0;
    }

    .grid_image_macbookpro {
        padding: 12.5rem 0 2rem 0;
    }
}

@media (min-width: 64rem) {

    .below_fold_grid {
        grid-template-columns: 1fr 1fr;
        padding: 0 0.625rem 0 0.625rem;
    }

    .below_fold_2 {
        height: 690px;
    }

    .section_title {
        font-size: 3.5rem;
        height: 50px;
        line-height: 50px;
    }

    .section_subtitle {
        font-size: 1.8rem;
        height: 50px;
        line-height: 50px;
    }

    .image_holder {
        margin: 0 auto;
        margin-top: 1.25rem;
    }

    .image_holder_grid {
        margin-top: 0;
    }

    .section_cta {
        height: 225px;
    }

   .section_image {
        max-width: 31.25rem;
    }

    .section_buttons {
        width: 320px;
        height: 50px;
        line-height: 50px;
    }

    .grid_cta {
        height: 120px;
    }

    .grid_title {
        font-size: 2rem;
        height: 2.25rem;
        line-height: 2.25rem;
        font-weight: 400;
    }

    .grid_image_pods {
        max-width: 31.25rem;
        padding: 3.5rem 0 0 0;
    }

    .grid_image_watch {
        padding: 3rem;
    }

    .grid_image_exchange {
        max-width: 360px;
        padding: 5.5rem 0 0 0;
    }

    .navbar-mobile {
        display: none;
    }

    .navbar-desktop {
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: space-between;
        color: #000000CC;
        list-style: none;
        margin: 0 auto;
        min-width: 800px;
        font-size: 0.8rem;
    }

    .navbar-mobile {
        display: none;
    }
}

